--- a/myblog/package.json
+++ b/myblog/package.json
@@ -9,15 +9,19 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "4.2.1"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "hexo": "^4.2.1",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-calendar": "github:howiefh/hexo-generator-calendar",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-image-link": "^0.0.5",
+    "hexo-lazyload-image": "^1.0.13",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^1.1.0",
