--- a/myblog/package.json
+++ b/myblog/package.json
@@ -15,10 +15,12 @@
     "hexo": "^4.2.1",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-calendar": "github:howiefh/hexo-generator-calendar",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-searchdb": "^1.4.1",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-image-link": "^0.0.5",
     "hexo-lazyload-image": "^1.0.13",
